# rau

./: .gitignore  .gitmodules  Makefile  README.md  analyze_entropy.py  counting_terminals.ipynb  data  entropy.ipynb  monte_carlo_estimation.sh  monte_carlo_estimation_less_expansion.sh  monte_carlo_estimation_less_expansion_job.sh  monte_carlo_estimation_less_expansion_job_50.sh  monte_carlo_sent_prob.ipynb  monte_carlo_simulation copy.py  monte_carlo_simulation.py  monte_carlo_simulation_mpi.py  ngram_entropy.py  pcfg.py  preprocess.sh  pyproject.toml  requirement.txt  results  run.sh  run_all_jobs.py  sanity_check.ipynb  train_3.sh  train_lm_lstm.sh  train_lm_transformer.sh
R/: mixed_effects_model.R
config/: base-grammar_eos_zipf.gr  perturbation_func.json  perturbation_func_deterministic_shuffle.json  perturbation_func_even_odd_shuffle.json  perturbation_func_local.json  perturbation_func_local2.json  perturbation_func_odd_even_shuffle.json  perturbation_func_reverse.json  pfsa_config.yaml
data_gen/: base-grammar.gr  base-grammar_eos.gr  gen_data.sh  generate_sentences_kallini.py  make_splits.py  make_splits_kallini.py  permute_sentences.py  perturb_sentences_kallini.py  sample_base-grammar.txt  sample_base-grammar_eos.txt  sample_sentences.py  simple-grammar.gr
experiments/: include.bash  non_anonymous_config.bash  singularity_exec.bash
notebooks/: architecture_parameter_comparison.ipynb  compare_complexity_measures.ipynb  entropy.ipynb  evaluate_delta_perplexity copy.ipynb  evaluate_delta_perplexity.ipynb  evaluate_delta_perplexity_no_split.ipynb  ngram.ipynb  (+17 more)
(+7634 files in other folders)
