[tool.poetry]
name = "lm-inductive-bias"
version = "0.1.0"
description = ""
authors = ["agiats"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scipy = "^1.15.1"
matplotlib = "^3.10.0"
pandas = "^2.2.3"
numpy = "^2.2.2"
torch = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
