[tool.poetry]
name = "lm-inductive-bias"
version = "0.1.0"
description = ""
authors = ["agiats"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scipy = "^1.15.1"
matplotlib = "^3.10.0"
pandas = "^2.2.3"
numpy = "^1.26.4"
torch = "^2.6.0"
rau = {git = "ssh://git@github.com/bdusell/rau.git"}
seaborn = "^0.13.2"
nltk = "^3.9.1"
hydra-core = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
